--- a/styles/style2.css
+++ b/styles/style2.css
@@ -6,7 +6,7 @@ html {
   --toggle-btn: #231f20;
   --container-bg: #b25068;
   --borders-overall: #0d1b27;
-  --pricing-plan: #d4dadf;
+  --pricing-plan: #ffffff;
   --pricing-header-h2: #333333;
   --pricing-button: #ffe1e1;
   --pricing-button-hover: #ffe1e1;
