--- a/styles/style3.css
+++ b/styles/style3.css
@@ -6,7 +6,7 @@ html {
   --toggle-btn: #231f20;
   --container-bg: #554994;
   --borders-overall: #0d1b27;
-  --pricing-plan: #d4dadf;
+  --pricing-plan: #ffffff;
   --pricing-header-h2: #333333;
   --pricing-button: #d1caf6;
   --pricing-button-hover-txt: black;
